# health

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SPEC.md  pyproject.toml
app/: config.py  main.py
app/auth/: api_key.py  dependencies.py  google.py
app/routers/: api.py  auth.py  web.py
app/s3/: client.py  models.py
app/templates/: base.html  dashboard.html  index.html  snapshot.html
cdk/: app.py
cdk/stacks/: sumo_dashboard_viewer_stack.py
cdk/tests/: test_stack.py
lambda/email_processor/: handler.py
lambda/email_processor/tests/: test_handler.py
lambda/pdf_converter/: handler.py  requirements.txt
lambda/pdf_converter/tests/: test_handler.py
scripts/: generate_example_data.py
tests/: test_auth.py  test_routers.py  test_s3.py
