[project]
name = "sumo-dashboard-viewer"
version = "0.1.0"
description = "Ingests Sumo Logic scheduled report emails, converts PDF attachments to PNG, and serves via mobile-friendly web app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "boto3>=1.35",
    "authlib>=1.3",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "moto[s3,ssm]>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
]
lambda-email = [
    "boto3>=1.35",
]
lambda-pdf = [
    "boto3>=1.35",
    "pdf2image>=1.17",
    "Pillow>=11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests", "lambda/email_processor/tests", "lambda/pdf_converter/tests"]
pythonpath = ["."]
